cli/tests/snapshot/snapshots/snapshot__eval_stderr_function_contract_domain_violation.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: contract broken by the caller
  ┌─ [INPUTS_PATH]/errors/function_contract_domain_violation.ncl:5:47
  │
5 │ let Foo = Number -> Number in ((fun x => x) | Foo) "a"
  │                                               ---  --- evaluated to this expression
  │                                               │     
  │                                               expected type
  │
  ┌─ <unknown> (generated by evaluation):1:1
  │
1 │ "a"
  │ --- evaluated to this value

note: 
  ┌─ [INPUTS_PATH]/errors/function_contract_domain_violation.ncl:5:32
  │
5 │ let Foo = Number -> Number in ((fun x => x) | Foo) "a"
  │                                ^^^^^^^^^^^^ While calling to x
